--- a/app/views/shared/_header.haml
+++ b/app/views/shared/_header.haml
@@ -2,7 +2,7 @@
   .container
     .navbar-header
       .navbar-brand
-        SELLITO
+        = link_to 'SELLITO', root_path
 
     %ul.nav.navbar-nav.pull-right
       %li
