--- a/app/views/shared/_header.haml
+++ b/app/views/shared/_header.haml
@@ -2,8 +2,8 @@
   .container
     .navbar-header
       .navbar-brand
-        = link_to 'SELLITO', root_path
-
+        = link_to image_tag("logo.png",
+        size: "43x50"), root_path
     %ul.nav.navbar-nav.pull-right
       %li
         = link_to 'Home', root_path
@@ -11,3 +11,9 @@
         = link_to 'About', about_path
       %li
         = link_to 'Cookies', cookies_path
+      %li
+        - if current_user
+          = current_user.email
+          = link_to 'logout', destroy_user_session_path(current_user), method: :delete
+        - else
+          = link_to 'login', new_user_session_path
