--- a/app/views/shared/_header.haml
+++ b/app/views/shared/_header.haml
@@ -14,6 +14,6 @@
       %li
         - if current_user
           = current_user.email
-          = link_to 'logout', destroy_user_session_path(current_user), method: :delete
+          = link_to 'Logout', destroy_user_session_path, method: :delete
         - else
-          = link_to 'login', new_user_session_path
+          = link_to 'Login', new_user_session_path
