--- a/app/views/categories/_form.haml
+++ b/app/views/categories/_form.haml
@@ -1,4 +1,4 @@
 = form_for @category do |f|
   = f.label :name
   = f.text_field :name
-  = f.submit 'Submit'
+  = f.submit 'Submit', class: 'btn btn-primary'
