--- a/app/views/shared/_header.haml
+++ b/app/views/shared/_header.haml
@@ -14,5 +14,8 @@
       - if current_user_is_admin
         %li
           = link_to 'Categories', categories_path
+      - if current_user
+        %li
+          = link_to 'Posts', posts_path
       %li
         = login_or_logout_user_link
