quick update after absence :)

--- a/app/views/homepage/index.haml
+++ b/app/views/homepage/index.haml
@@ -1,4 +1,8 @@
 .row
   .container
-    %h2 Welcome to Sellito !!
-    
+    %h2.text-center What are you looking for today?
+    .col-sm-6.col-sm-offset-3
+      %input.form-control{placeholder: "I want...",type: "text"}
+  .raw.text-center
+    - @categories.all.each do |category|
+      = link_to category.name.capitalize, category
