--- a/app/views/categories/show.haml
+++ b/app/views/categories/show.haml
@@ -1,3 +1,3 @@
 %h2
-  = @category.name
-  = link_to "edit", edit_category_path(@category)
+  = @category.name.capitalize
+  = link_to "Edit", edit_category_path(@category)
