--- a/app/views/posts/_form.haml
+++ b/app/views/posts/_form.haml
@@ -1,12 +1,12 @@
 = form_for @post do |f|
   %p
-  = f.label :title
-  = f.text_field :title
+    = f.label :title
+    = f.text_field :title
   %p
-  = f.label :description
-  = f.text_area :description
+    = f.label :description
+    = f.text_area :description
   %p
-  = f.label :expiration_date
-  = f.date_field :expiration_date
-  %p
-  = f.submit 'Submit', class: 'btn btn-primary'
+    = f.label :expiration_date
+    = f.date_field :expiration_date
+  = f.hidden_field :user_id, value: current_user.id
+  %p= f.submit 'Submit'
