add current_user_is admin method to application helper to use it in show view

--- a/app/views/posts/user_posts.haml
+++ b/app/views/posts/user_posts.haml
@@ -1,6 +1,5 @@
-= button_to "Add post", new_post_path, method: :get, class: 'btn btn-xs pull-right'
+= button_to "Add Post", new_post_path, method: :get, class: 'btn btn-primary'
 
-%h4 My posts
 
 - @posts.each do |post|
   %p
