--- a/app/views/homepage/index.haml
+++ b/app/views/homepage/index.haml
@@ -6,3 +6,11 @@
   .raw.text-center
     - @categories.all.each do |category|
       = link_to category.name.capitalize, category
+  .row.text-center
+    - @posts.each_slice(3) do |slice|
+      %br
+      - slice.each do |post|
+        = link_to post.title, post
+        Categories:
+        - post.categories.each do |category|
+          = category.name
